# allen_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
src/anim/: CMakeLists.txt  todo
src/anim/include/anim/: animation.hpp  animation_clip.hpp  blender.hpp  bone.hpp  bone_mask.hpp  event.hpp  frame_time.hpp  pose.hpp  skeleton.hpp  sync_track.hpp  track.hpp  track_key.hpp  types.hpp
src/anim/src/: pose.cpp  sync_track.cpp  track.cpp
src/anim/src/graph/: passthrough_node.cpp
src/anim/src/module/: module.cpp
src/asset_converter/: CMakeLists.txt
src/asset_converter/include/asset_converter/: asset_converter.hpp  assimp_animation.hpp  assimp_asset.hpp  assimp_material.hpp  assimp_scene_context.hpp  assimp_skeleton.hpp  image_converter.hpp
src/asset_converter/src/: assimp_animation.cpp  assimp_scene_context.cpp  assimp_skeleton.cpp  cli.cpp  converter.cpp  converter.hpp  image_converter.cpp
src/asset_converter/src/raw_assets/: raw_skeleton.cpp
src/assets/: CMakeLists.txt  readme.md
src/assets/include/assets/: asset.hpp  asset_archive_header.hpp  asset_id.hpp  asset_service.hpp  asset_type_id.hpp  handle.hpp  loader.hpp  manager.hpp  record.hpp  request.hpp  request_context.hpp  status.hpp
src/assets/src/: asset_service.cpp  loader.cpp  manager.cpp  request.cpp
src/assets/src/asset_converter/: converter.cpp
src/assets/src/asset_system/: animation_clip_asset.cpp  asset_system.cpp  material_asset.cpp  mesh_asset.cpp  prefab_asset.cpp  skeletal_mesh_asset.cpp  skeleton_asset.cpp  texture_asset.cpp
src/assets/src/module/: module.cpp
src/assets/src/reflection/: types.cpp
src/assets/src/type_descriptors/: handle.cpp
src/common/: CMakeLists.txt
src/common/include/common/: binary_archive.hpp  colors.hpp  drawing_context.hpp  engine_module.hpp  event.hpp  hash_vector.hpp  memory.hpp  mesh.hpp  string_id.hpp  transform.hpp  types.hpp  update_stages.hpp  uuid.hpp  vertex.hpp
src/common/src/: colors.cpp  memory.cpp  mesh.cpp  string_id.cpp  transform.cpp  uuid.cpp
src/common/src/maths/: matrix4x4.cpp  quaternion.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/common/src/serialization/: binary_archive.cpp
src/common/test/: transform.cpp
src/core/: CMakeLists.txt  allocation.hpp  buffer.cpp  buffer.hpp  commandpool.cpp  commandpool.hpp  context.cpp  context.hpp  descriptor.cpp  device.cpp  device.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  picker.cpp  pipeline.cpp  queue.hpp  renderpass.hpp  shaders.cpp  shaders.hpp  swapchain.cpp  texture.cpp  texture.hpp  textureCubeMap.cpp  texture_cubemap.cpp  texture_cubemap.hpp  vulkanDevice.hpp
src/core/include/core/: animation_component.hpp  camera.hpp  camera_controller.hpp  component_factory.hpp  debug_render_states.hpp  light.hpp  material.hpp  mesh.hpp  mesh_renderer.hpp  render_system.hpp  skeletal_mesh.hpp  skybox.hpp  static_mesh.hpp  texture.hpp
src/core/src/: animation_component.cpp  camera.cpp  camera_controller.cpp  light.cpp  mesh.cpp  mesh_renderer.cpp  render_system.cpp  skybox.cpp
src/core/src/components/: animation_graph.cpp  animation_graph_component.cpp  animation_player_component.cpp  camera.cpp  camera_component.cpp  light.cpp  light_component.cpp  mesh.cpp  mesh_component.cpp  skeletal_mesh.cpp  skeletal_mesh_component.cpp  static_mesh.cpp  static_mesh_component.cpp
src/core/src/entity_systems/: animation.cpp  animation_system.cpp  camera_controller.cpp  camera_controller_system.cpp  player_controller.cpp  player_controller_system.cpp  script.cpp  script_system.cpp
src/core/src/module/: module.cpp
src/core/src/services/: time_service.cpp
src/core/src/systems/: animation.cpp  script.cpp
src/core/src/type_descriptors/: assets.cpp
src/core/src/world_systems/: render_system.cpp  world_rendering_system.cpp
src/editor/: CMakeLists.txt
src/editor/include/editor/: aln_imgui_widgets.hpp  editor.hpp  (+9 more)
src/editor/src/: assets_browser.cpp  editor.cpp  editor_window.cpp  entity_inspector.cpp  preview_scene_settings.cpp  properties_window.cpp  types_editor.cpp
src/entities/: CMakeLists.txt  todo
src/entities/src/: command.cpp  component.cpp  entity.cpp  entity_collection.cpp  entity_descriptors.cpp  entity_map.cpp  entity_system.cpp  spatial_component.cpp  transform.cpp  world_entity.cpp  world_system.cpp
src/graphics/: CMakeLists.txt  commandpool.cpp  commandpool.hpp  device.cpp  device.hpp  imgui.hpp  instance.cpp  instance.hpp  offline_renderer.hpp  pipeline.cpp  pipeline.hpp  queue.hpp  render_pass.hpp  render_pass2.hpp  render_pass_old.hpp  render_target.hpp  renderer.hpp  renderer_old.hpp  shaders.cpp  shaders.hpp  subpass.hpp  swapchain.cpp  swapchain.hpp  vulkan_context.hpp  window.cpp  window.hpp
src/graphics/renderers/: irenderer.hpp  offline_renderer.hpp  swapchain_renderer.hpp
src/graphics/rendering/: offline_renderer.hpp  render_target.hpp  renderer.hpp  swapchain_renderer.hpp
src/graphics/resources/: allocation.hpp  buffer.cpp  buffer.hpp  image.cpp  image.hpp  image2.cpp  image2.hpp  texture.cpp  texture.hpp  texture_cubemap.cpp
src/graphics/src/: command_buffer.cpp  commandpool.cpp  descriptor_allocator.cpp  device.cpp  draw_mesh.cpp  instance.cpp  pipeline.cpp  render_engine.cpp  render_pass.cpp  shaders.cpp  subpass.cpp  swapchain.cpp  window.cpp
src/input/: CMakeLists.txt  callback_context.hpp  control_state_event.hpp  input_action.hpp  input_action_phase.hpp  input_control.hpp  input_device.hpp  input_system.cpp  input_system.hpp  interactions.hpp  keyboard.hpp  mouse.hpp  readme.md
src/input/controls/: button_control.hpp  input_control.cpp  input_control.hpp
src/input/src/: input_action.cpp  input_context.cpp  input_control.cpp  input_device.cpp  input_service.cpp  input_system.cpp  keyboard.cpp  mouse.cpp
src/reflection/: CMakeLists.txt  readme.md
src/reflection/src/: primitives.cpp  reflection.cpp  type_info.cpp
src/utils/: CMakeLists.txt  color_uid.cpp  files.cpp  singleton.hpp  type_info.cpp  type_info.hpp  uuid.cpp  uuid.hpp
src/utils/src/: color_uid.cpp  files.cpp  ring_buffer.cpp  uuid.cpp
(+401 files in other folders)
